--- a/netflex.html
+++ b/netflex.html
@@ -129,7 +129,7 @@
         </div>
     </div>
     <button class="language-btn">English<img src="images/down-icon.png"></button>
-    <p class="copyright-text">Netflix India</p>
+    <p class="copyright-text">Netflix America</p>
 </div>
 </body>
 </html>
